# dfclean

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
dfclean/: __init__.py  cleaner.py  detectors.py  imputers.py  pipeline.py  reporter.py  schema.py  type_handler.py  utils.py
docker/: demo.py
notebooks/: tutorial.ipynb
tests/: conftest.py  test_detectors.py  test_imputers.py  test_pipeline.py  test_schema.py
