[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dfclean"
version = "0.1.0"
description = "Automatic DataFrame cleaning: nulls, duplicates, types, outliers."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "dfclean contributors" }]
keywords = ["pandas", "data-cleaning", "dataframe", "etl", "preprocessing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = ["pandas>=1.5", "numpy>=1.22"]

[project.optional-dependencies]
ml  = ["scikit-learn>=1.2"]
dev = ["pytest>=7", "pytest-cov>=4", "black", "ruff", "build", "twine"]
all = ["dfclean[ml,dev]"]

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/dfclean"
Repository = "https://github.com/YOUR_USERNAME/dfclean"

[tool.setuptools.packages.find]
where   = ["."]
include = ["dfclean*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -v"
